<resources>
    <string name="app_name">DronVision</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="action_register">Zarejestruj się</string>
    <string name="error_invalid_login">Login jest nieprawidłowy</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło niepoprawne</string>
    <string name="error_no_network_connection">Brak połączenia z internetem</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_vision">VisionActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_vision_title">Wizualizacja</string>
    <string name="nav_preferences_title">Preferencje wizualizacji</string>
    <string name="nav_settings_title">Ustawienia konta</string>
    <string name="nav_history_title">Historia wizualizacji</string>
    <string name="nav_simulation_title">Symulacja</string>
    <string name="nav_about_author_title">O autorze</string>
    <string name="nav_about_app_title">O aplikacji</string>

    <string name="action_settings">Ustawienia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_app_text"> " "Aplikacja DronVision jest aplikacją służącą do wizualizacji obszaru przeszukanego przez drony."\n"
        Poprzez obszar przeszukany rozumie się reprezentację terenu zarejestrowane poprzez kamerę zamontowaną na dronie."\n"
        Algorytm jako dane modelujące powierzchnię ziemską wykorzystuje numeryczny model terenu (NMT) opracowany na podstawie danych zebranych w ramach misji SRTM (Shuttle Radar Topography Mission)."\n"
        Aplikacja umożliwia wizualizację obszaru dla kilku dronów jednocześnie z jednoczesną możliwością dostosowania preferencji wizualizacji.
        </string>

    <string name="about_author_text"> " "Nazywam się Michał Kapiczyński. Mam 23 lata i jestem studentem Automatyki i Robotyki, na specjalności Informatyka Przemysłowa na wydziale Mechatroniki Politechniki Warszawsekiej."\n"
        Programowaniem zajmuję się nie tylko edukacyjnie, ale również zawodowo. Pracuję na stanowisku młodszego programisty w firmie Atos Polska, gdzie biorę udział w implementacji rozwiązań informatycznych z wykorzystaniem języka Java, Javascript, HTML oraz Groovy."\n"
        Z kwestii mniej formalnych jestem gitarzystą, motocyklistą, trochę żegluję, surfuję, śpiewam, tańczę, staram się prowadzić ciekawe i aktywne życie :).

        </string>


</resources>
