<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vision"
            android:icon="@drawable/ic_action_eye_open"
            android:title="@string/nav_vision_title"
            android:actionViewClass="android.widget.ImageButton"/>
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_preferences_title" />
        <item
            android:id="@+id/nav_simulation"
            android:icon="@drawable/ic_action_rocket"
            android:title="@string/nav_simulation_title" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings_title" />
    </group>

    <item android:title="Dodatkowe">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about_app_title" />
            <item
                android:id="@+id/nav_about_author"
                android:icon="@drawable/ic_action_emo_cool"
                android:title="@string/nav_about_author_title" />
        </menu>
    </item>

</menu>
